--- a/multiselect/build.gradle
+++ b/multiselect/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  compileSdkVersion 27
 
   defaultConfig {
     minSdkVersion 15
-    targetSdkVersion 25
+    targetSdkVersion 27
+    multiDexEnabled true
     versionCode 1
     versionName "1.0"
 
@@ -25,11 +25,8 @@ dependencies {
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:25.0.1'
+  implementation 'com.android.support:appcompat-v7:27.0.2'
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:design:25.0.1'
-  compile 'com.android.support:recyclerview-v7:25.0.1'
+  implementation 'com.android.support:design:27.0.2'
+  compile 'com.android.support:recyclerview-v7:27.0.2'
 }
-
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.karanvs'
